# libredwg

./: .api.c.swp  .appveyor.yml  .cirrus.yml  .clang-format  .clang-tidy  .dockerignore  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTING  ChangeLog  Dockerfile  Dockerfile-dist  Dockerfile-master  HACKING  Makefile.am  Makefile.in  NEWS  README  README-alpha  README.md  SECURITY.md  TODO  USING_FOREIGN_CODE  acinclude.m4  aclocal.m4  api.c  api.h  autogen.sh  build.sh  clang-cl-msvc.cmake  cmp-objs.pl  config.h.in  (+46 more)
bindings/: Makefile.am  dwg.i
bindings/csharp/: Makefile.am
bindings/cxx/: Makefile.am
bindings/javascript/: .gitignore  .prettierignore  .prettierrc.js  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json  vite.config.ts
bindings/js/: README.md  index.cjs  index.mjs  package.json
bindings/perl/: .gitignore  LibreDWG.pm  LibreDWG.xs  MANIFEST  Makefile.PL  Makefile.PL.in
bindings/python/: Makefile  Makefile.am  libredwgmodule.c
bindings/vapi/: Makefile.am  dwg.vapi
doc/: Doxyfile  Doxyfile.in  LibreDWG.texi  Makefile.am  ODA-5.4.2-libredwg.patch  dynapi.texi  footer.in  gendocs_template
doc/html/: annotated.html  annotated.js  bits_8c.html  bits_8c.js  bits_8h.html  bits_8h.js  bits_8h_source.html  classes.html  common_8c.html  common_8c.js  common_8h.html  common_8h.js  common_8h_source.html  decode_8c.html  decode_8c.js  decode_8h.html  decode_8h.js  decode_8h_source.html  decode__r2007_8c.html  decode__r2007_8c.js  dwg_8c.html  dwg_8c.js  dwg_8h.html  dwg_8h.js  dwg_8h_source.html  dwg__api_8c.html  dwg__api_8c.js  dwg__api_8h.html  dwg__api_8h.js  dwg__api_8h_source.html  encode_8c.html  encode_8c.js  encode_8h.html  encode_8h.js  encode_8h_source.html  files.html  files.js  functions.html  functions_0x61.html  functions_0x62.html  (+374 more)
doc/latex/: annotated.tex  bits_8c.tex  bits_8h.tex  common_8c.tex  common_8h.tex  decode_8c.tex  decode_8h.tex  decode__r2007_8c.tex  doxygen.sty  dwg_8c.tex  dwg_8h.tex  dwg__api_8c.tex  dwg__api_8h.tex  encode_8c.tex  encode_8h.tex  files.tex  logging_8h.tex  print_8c.tex  print_8h.tex  refman.tex  structDwg__Section__Info.tex  structObject__Map.tex  struct__bit__chain.tex  struct__dwg__binary__chunk.tex  struct__dwg__bitecode__2bd.tex  struct__dwg__bitecode__2rd.tex  struct__dwg__bitecode__3bd.tex  struct__dwg__bitecode__3rd.tex  struct__dwg__chain.tex  struct__dwg__class.tex  struct__dwg__color.tex  struct__dwg__entity__3DSOLID.tex  struct__dwg__entity__3DSOLID__silhouette.tex  struct__dwg__entity__3DSOLID__wire.tex  struct__dwg__entity__3D__FACE.tex  struct__dwg__entity__ARC.tex  struct__dwg__entity__ATTDEF.tex  struct__dwg__entity__ATTRIB.tex  struct__dwg__entity__BLOCK.tex  struct__dwg__entity__CIRCLE.tex  (+108 more)
examples/: ACAD_EVALUATION_GRAPH.pi  ACAD_TABLE.pi  ACDBASSOC2DCONSTRAINTGROUP.pi  ACDBASSOCACTION.pi  ACDBASSOCALIGNEDDIMACTIONBODY.pi  ACDBASSOCDEPENDENCY.pi  ACDBASSOCGEOMDEPENDENCY.pi  ACDBASSOCNETWORK.pi  ACDBASSOCOSNAPPOINTREFACTIONPARAM.pi  ACDBASSOCPERSSUBENTMANAGER.pi  ACDBASSOCPLANESURFACEACTIONBODY.pi  ACDBASSOCVERTEXACTIONPARAM.pi  ACDBDETAILVIEWSTYLE.pi  ACDBPERSSUBENTMANAGER.pi  ACDBSECTIONVIEWSTYLE.pi  ACDB_DYNAMICBLOCKPURGEPREVENTER_VERSION.pi  ACDB_LEADEROBJECTCONTEXTDATA_CLASS.pi  ACSH_HISTORY_CLASS.pi  ACSH_SWEEP_CLASS.pi  ARC_DIMENSION.pi  CSACDOCUMENTOPTIONS.pi  DBCOLOR.pi  DIMASSOC.pi  EXTRUDEDSURFACE.pi  HELIX.pi  LAYOUTPRINTCONFIG.pi  LIGHT.pi  LOFTEDSURFACE.pi  MATERIAL.pi  Makefile.am  Makefile.in  PLANESURFACE.pi  PLOTSETTINGS.pi  RAPIDRTRENDERSETTINGS.pi  REVOLVEDSURFACE.pi  SUN.pi  SWEPTSURFACE.pi  TABLECONTENT.pi  TABLEGEOMETRY.pi  TABLESTYLE.pi  (+137 more)
programs/: Makefile.am  alive.test  alive.test.in  cmp_dxf.pl  common.inc  convert.c  dwg2SVG.1  dwg2SVG.c  dwg2dxf.1  dwg2dxf.c  dwg2ps.1  dwg2ps.c  dwg_ps.c  dwgbmp.1  dwgbmp.c  dwgfilter.1  dwgfilter.c  dwgfilter.in  dwgfilter.test.in  dwggrep.1  dwggrep.c  dwglayers.1  dwglayers.c  dwgplot.1  dwgplot.c  dwgread.1  dwgread.c  dwgrewrite.1  dwgrewrite.c  dwgwrite.1  dwgwrite.c  dxf.test  dxf.test.in  dxf2dwg.1  dxf2dwg.c  dxfb.test.in  dxfread.1  dxfread.c  dxfwrite.1  dxfwrite.c  (+13 more)
src/: #dwg_api.c#  2ndheader.spec  HEADER.txt  Makefile.am  Makefile.in  acds.spec  api.c  appinfo.spec  auxheader.spec  binding.cpp  binding.h  binding1.cpp  binding_dynapi.cpp  binding_func.cpp  binding_val.cpp  bits.c  bits.h  classes.c  classes.h  classes.inc  cmakeconfig.h.in  codepages.c  codepages.h  common.c  common.h  common_entity_data.spec  common_entity_handle_data.spec  common_object_handle_data.spec  config.h.in  datastorage.spec  dec_macros.h  decode.c  decode.h  decode2.c  decode_r11.c  decode_r11.h  decode_r2007.c  dwg.c  dwg.h  dwg.spec  (+72 more)
src/.deps/: bits.Plo  common.Plo  decode.Plo  dwg.Plo
src/codepages/: BIG5.TXT  BIG5.h  CP437.TXT  CP437.h  CP850.TXT  CP850.h  CP852.TXT  CP852.h  CP855.TXT  CP855.h  CP857.TXT  CP857.h  CP860.TXT  CP860.h  CP861.TXT  CP861.h  CP863.TXT  CP863.h  CP864.TXT  CP864.h  CP865.TXT  CP865.h  CP866.TXT  CP866.h  CP869.TXT  CP869.h  CP932.TXT  CP932.h  CP949.h  GB2312.h  ISO-8859-2.h  ISO-8859-3.h  ISO-8859-4.h  ISO-8859-5.h  ISO-8859-6.h  ISO-8859-7.h  ISO-8859-8.h  ISO-8859-9.h  JOHAB.TXT  JOHAB.h  (+19 more)
test/: .gitignore  Makefile.am  test_logging.c
test/fuzz/: fuzz_dwg_decode.c
test/test-data/: Makefile.am  example_2000.dwg  example_2000.dxf  example_2000.dxfb  example_2004.dwg  example_2004.dxf  example_2007.dwg  example_2007.dxf  example_2010.dwg  example_2010.dxf  example_2013.dwg  example_2013.dxf  newxml.py  (+16 more)
unit-testing/: 3dsolid.c  Makefile  Makefile.am  arc.c  attdef.c  attrib.c  block.c  body.c  circle.c  common.c  dim_aligned.c  dim_ang2ln.c  dim_ang3pt.c  dim_diameter.c  dim_linear.c  dim_ordinate.c  dim_radius.c  ellipse.c  endblk.c  insert.c  line.c  lwpline.c  minsert.c  mline.c  mtext.c  ole2frame.c  point.c  polyline_2d.c  polyline_3d.c  polyline_mesh.c  polyline_pface.c  ray.c  region.c  seqend.c  shape.c  solid.c  text.c  tolerance.c  trace.c  vertex_2d.c  (+4 more)
(+1270 files in other folders)
